# Vector-Flow

./: .env.example  .gitignore  Jenkinsfile  Makefile  README.md  docker-compose.yml  pytest.ini
ansible/: ansible.cfg  requirements.yml
ansible/inventory/: hosts.example.yml
ansible/inventory/group_vars/: all.yml  kubernetes.yml
ansible/playbooks/: cluster-setup.yml  deploy-vectorflow.yml  local-dev-setup.yml  security-hardening.yml
chef/: Berksfile  Makefile  chefignore  kitchen.yml
chef/.chef/: config.rb
chef/compliance/vectorflow/: inspec.yml
chef/compliance/vectorflow/controls/: docker.rb  filesystem.rb  firewall.rb  services.rb  ssh.rb
chef/cookbooks/vectorflow_app/: metadata.rb
chef/cookbooks/vectorflow_app/attributes/: default.rb
chef/cookbooks/vectorflow_app/recipes/: config.rb  default.rb  deploy.rb  monitoring.rb
chef/cookbooks/vectorflow_app/templates/: health-check.sh.erb  status.sh.erb  vectorflow.env.erb  vectorflow.yaml.erb
chef/cookbooks/vectorflow_base/: metadata.rb
chef/cookbooks/vectorflow_base/attributes/: default.rb
chef/cookbooks/vectorflow_base/recipes/: default.rb  directories.rb  limits.rb  ntp.rb  packages.rb  sysctl.rb  users.rb
chef/cookbooks/vectorflow_base/templates/: chrony.conf.erb  limits.conf.erb  sysctl.conf.erb
chef/cookbooks/vectorflow_docker/: metadata.rb
chef/cookbooks/vectorflow_docker/attributes/: default.rb
chef/cookbooks/vectorflow_docker/recipes/: compose.rb  configure.rb  default.rb  install.rb  networks.rb
chef/cookbooks/vectorflow_docker/templates/: docker-override.conf.erb
chef/cookbooks/vectorflow_kubernetes/: metadata.rb
chef/cookbooks/vectorflow_kubernetes/attributes/: default.rb
chef/cookbooks/vectorflow_kubernetes/recipes/: default.rb  helm.rb  kubeadm.rb  kubectl.rb  minikube.rb
chef/cookbooks/vectorflow_kubernetes/templates/: kubectl-aliases.erb  kubectl-completion.erb  minikube-start.sh.erb  minikube-stop.sh.erb
chef/cookbooks/vectorflow_security/: metadata.rb
chef/cookbooks/vectorflow_security/attributes/: default.rb
chef/cookbooks/vectorflow_security/recipes/: audit.rb  auto_updates.rb  compliance_check.rb  default.rb  fail2ban.rb  firewall.rb  packages.rb  ssh.rb
chef/cookbooks/vectorflow_security/templates/: auditd.conf.erb  compliance-check.sh.erb  drift-detection.sh.erb  jail.local.erb  sshd_config.erb  vectorflow-audit.rules.erb  vectorflow-jail.conf.erb
chef/data_bags/users/: vectorflow.json
chef/environments/: development.json  production.json  staging.json
chef/policies/: vectorflow-base.rb  vectorflow-security.rb  vectorflow-standalone.rb  vectorflow-worker.rb
chef/roles/: vectorflow-server.json  vectorflow-standalone.json  vectorflow-worker.json
cli/: README.md  pyproject.toml
cli/vectorflow_cli/: __init__.py  client.py  main.py
docs/: LOCAL_DEVELOPMENT.md
frontend/: Dockerfile  next.config.js  package-lock.json  package.json  tailwind.config.js
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/lib/: api.ts  types.ts
go/: Dockerfile  Makefile  go.mod  go.sum
go/cmd/gateway/: main.go
go/internal/api/: auth.go  handlers.go
go/internal/config/: config.go
go/internal/middleware/: auth.go  tracing.go
go/internal/service/: client.go
go/internal/telemetry/: tracing.go
helm/vectorflow/: Chart.yaml  values.yaml
helm/vectorflow/templates/: NOTES.txt  _helpers.tpl  frontend-deployment.yaml  gateway-deployment.yaml  hpa.yaml  inference-deployment.yaml  ingress.yaml  pvc.yaml  serviceaccount.yaml  services.yaml  worker-deployment.yaml
jenkins/config/: jenkins-config.yaml
jenkins/scripts/: smoke-tests.sh
k8s/: configmap.yaml  ingress.yaml  kustomization.yaml  namespace.yaml  network-policy.yaml  secrets.yaml
k8s/frontend/: deployment.yaml  service.yaml
k8s/gateway/: deployment.yaml  service.yaml
k8s/inference/: deployment.yaml  service.yaml
k8s/worker/: deployment.yaml  service.yaml
python/: Dockerfile  Makefile  pyproject.toml  requirements-dev.txt  requirements.txt
python/app/: __init__.py  api.py  config.py  main.py  models.py  telemetry.py
python/services/: __init__.py  embedding.py  vector_store.py
python/tests/: __init__.py  test_api.py
rust/: Cargo.toml  Dockerfile  Makefile
rust/src/: main.rs
scripts/: check-deps.sh  cleanup.sh  dev-setup.sh  install-tools.sh  setup.sh  vf  vf-health.sh  vf-search.sh
terraform/: .gitignore  main.tf  outputs.tf  terraform.tfvars.example  variables.tf
tests/: __init__.py  requirements.txt
tests/integration/: __init__.py  conftest.py  test_services.py
